# blockchain-tools-app

./: dev-wallet-old.json  dev-wallet.json  wallet-old.json
client/: Dockerfile  index.html  package-lock.json  package.json  publish_client.sh  set-version.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
client/public/: version.txt
client/src/: App.vue  main.ts  style.css
client/src/api/: index.ts  pool-manager.ts
client/src/components/: Controls.vue  Ticker.vue
client/src/components/FloatingMenu/: FloatingMenu.vue
client/src/components/LiquidityPools/: LiquidityPools.vue  Position.vue
client/src/components/PoolManager/: ManagedPosition.vue  NewPosition.vue  OrcaPool.vue  PoolManager.vue  PoolManagerSettings.vue  Position.vue
client/src/components/Wallets/: WalletManager.vue
client/src/modules/: index.ts
client/src/modules/auth/: index.ts
client/src/modules/launcher/: index.ts
client/src/modules/liquidity-pools/: index.ts  managed-position.ts
client/src/modules/orca/: close-position-instruction.ts  open-position-instruction.ts  swap-instructions.ts  token-swap.ts
client/src/modules/pool-manager/: index.ts  managed-position.ts  new-position.ts  orca-pool.ts  position-settings.ts
client/src/plugins/: fontawesome-icons.ts
client/src/state/: index.ts
server/: .dockerignore  Cargo.toml  Dockerfile  generate-db.sh  publish_server.sh
server/.cargo/: config.toml
server/src/: main.rs
server/src/blockchains/solana/: account_snapshot.rs  liquidity_pools.rs  mod.rs  mod.rs_old
server/src/centralized_marketplaces/: coinbase.rs  mod.rs
server/src/db/: mod.rs
server/src/db/entities/: concentrated_position.rs  mod.rs  prelude.rs  swap.rs
server/src/db/services/: concentrated_position.rs  mod.rs
server/src/external_apis/: mod.rs
server/src/external_apis/helius/: account_info.rs  mod.rs  stake_account.rs
server/src/router/: mod.rs  pool_manager_message.rs  rest.rs
server/src/router/resources/: mod.rs  new_resource.rs  pool_manager.rs  public_key.rs  sessions.rs  tokens.rs
server/src/solana_pools/: mod.rs
server/temp/solana/: .gitignore  Cargo.toml
server/temp/solana/src/: lib.rs
server/temp/solana/src/pool_manager/: message.rs  mod.rs  new_position.rs
server/temp/solana/src/pool_manager/orca/: mod.rs  token_swap.rs
server/temp/solana/src/pool_manager/position_manager/: managed_position.rs  mod.rs
server/temp/solana/src/pool_manager/raydium/: mod.rs
server/temp/solana/src/price_info/: mod.rs  price_checker.rs
server/temp/solana/src/price_info/coinbase/: channel_messages.rs  mod.rs  order_book.rs  ticker.rs  websocket.rs
server/temp/solana/src/price_info/rpc/: mod.rs  solana_websocket.rs
server/temp/solana/src/rpc/: mod.rs  rpc_url.rs
server/temp/solana/src/token/: mod.rs
server/temp/solana/src/utils/: mod.rs
server/temp/solana/src/wallet/: mod.rs  programmatic_transaction.rs
(+23 files in other folders)
