[package]
name = "blockchain_tools_app_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
serde_json = "1.0.133"
cnctd_server = "0.4.7"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
local-ip-address = "0.6.3"
# sea-orm = { version = "1.1.2", features = ["runtime-tokio-native-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
# sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }
tokio-test = "0.4.4"
uuid = { version = "1.11.0", features = ["v4"] }
state = "0.6.0"
bincode = "1.3.3"
reqwest = { version = "0.12.9", features = ["json"] }
base64 = "0.22.1"
chrono = "0.4.39"
tokio-tungstenite ={ version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3.31"
url = "2.5.4"
solana = { version = "0.1.0", path = "../../modules/rust/solana" }
solana-sdk = "2.1.7"
solana-client = "2.1.7"
