[package]
name = "blockchain-tools-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
serde_json = "1.0.137"
cnctd_server = "0.4.7"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
local-ip-address = "0.6.3"
serde = { version = "1.0.217", features = ["derive"] }
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tokio-test = "0.4.4"
uuid = { version = "1.11.0", features = ["v4"] }
state = "0.6.0"
bincode = "1.3.3"
reqwest = { version = "0.12.9", features = ["json"] }
base64 = "0.22.1"
chrono = "0.4.39"
tokio-tungstenite ={ version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3.31"
url = "2.5.4"
solana = { path = "../../modules/rust/solana"  }
solana-sdk = "2.1.11"
solana-client = "2.1.11"
kebtech_utils = { path = "../../modules/rust/utils" }
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-uuid"] }
google-oauth = "1.11.3"
